--- a/POR FORA/index.html
+++ b/POR FORA/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>agencia </title>
+    <title>agencia de marketing </title>
     <meta name="description" content="um site de exemplo css">
     <meta name="keywords" content="agencia digital, css, html">
     <link rel="stylesheet" href="./index.css">
