--- a/POR FORA/oi.html
+++ b/POR FORA/oi.html
@@ -4,30 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oioioioi</title>
+    <title>Treino</title>
     <link rel="stylesheet" href="./oi.css">
 </head>
+<header>
 
-<body>
-    <header>
-        <div class="links">
-            <a href="">Home</a>
-            <a id="work">Work</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
-        </div>
-        <div class="header">
-            <h1>Easy Shopping
-                Via Mobile</h1>
+    <div>
+        <nav class="headernav">
+            <a href="#">Home</a>
+            <a href="#">Work</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </div>
+
+    <section>
+        <div class="sectiondiv">
+            <h1>Easy ShoppingVia Mobile</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Donec lorem justo, sollicitudin vel ultricies sed,
                 eleifend nec metus. Etiam vitae pellentesque dolor. </p>
             <button>Get Started</button>
         </div>
-        <div class="divimg">
-            <img src="./Illustration-3-3 (1).png" alt="">
-        </div>
-    </header>
+    </section>
+
+</header>
+
+
+
+
+<body>
 
 </body>
 
